[tool.poetry]
name = "snutest"
version = "0.1.0"
description = ""
authors = ["kaejong2 <keajong2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.10"
celery = "^5.4.0"
redis = "^5.2.1"
sqlmodel = "^0.0.22"
reflex = "0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
